[package]
name = "rentar_contract"
version = "0.1.0"
edition = "2021"
description = "Soroban smart contract for rent savings, goal tracking, and automated secure escrow payments."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"
